--- a/www/components/home/home.html
+++ b/www/components/home/home.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Home">
   <ion-content class="padding">
-    <center><h1>What's Going On This Month?</h1></center>
+    <center><h1>What's Going On This Week</h1></center>
   </ion-content>
 </ion-view>
