--- a/www/components/list/list.html
+++ b/www/components/list/list.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Events List">
   <ion-content>
-    <ion-list auto-list-divider ng-repeat="event in events">
+    <ion-list ng-repeat="event in events">
       <ion-item>
         {{ event.name.text }}
       </ion-item>
