Add error messages when I run out of API calls per hour

--- a/www/components/home/home.html
+++ b/www/components/home/home.html
@@ -1,5 +1,13 @@
 <ion-view view-title="Home">
   <ion-content class="padding">
     <center><h1>What's Going On This Week</h1></center>
+
+    <div class="item item-body">
+      <img class="full-image" src="https://ingohelp.zendesk.com/hc/en-us/article_attachments/202571958/eventbrite_logo_ff8000_gradient.png">
+      <h3>
+        Using the Eventbrite API, this simple app takes data and analyzes when events are during the week
+        as well as where they are located.
+      </h3>
+    </div>
   </ion-content>
 </ion-view>
